--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "ezProtocol",
-  "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,19 +7,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-safe-area-context": "4.10.1",
+    "@expo/metro-runtime": "~3.2.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "@react-native-picker/picker": "2.7.5"
+    "@react-navigation/stack": "^6.3.29",
+    "@react-navigation/native": "^6.1.17",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/native-stack": "^6.9.26",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-vector-icons": "10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
